--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,20 @@
           flex-direction: row;
 }
 
+@media (max-width: 768px) {
+  .btn-flex {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100px;
+            flex: 0 0 100px;
+  }
+}
+
 .btn-flex a {
   color: white;
 }
