--- a/css/style.scss
+++ b/css/style.scss
@@ -55,6 +55,12 @@
     @include flexCenter;
 }
 
+@media(max-width:768px){
+    .btn-flex{
+        flex-wrap: wrap;
+        flex-direction: column;
+        flex: 0 0 100px;
+}}
 .btn-flex a{
     color: $primary-color;
 }
